syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.bwl.bwfla.emucomp.grpc";
option java_outer_classname = "Commons";

package emucomp;

message EmptyRequest {}
message EmptyResponse {}

message GenericResponse {
  string message = 1;
}

message ListResponse {
  GenericResponse responseBody = 1;
  repeated string responseList = 12;
}

message MapResponse {
  GenericResponse responseBody = 1;
  map<string, string> responseMap = 12;
}